# emium-geometry-engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: input.h  io_utils.h  marginline.h  output.h  type.h
src/: geometry_engine.cpp  input.cpp  io_utils.cpp  main.cpp  marginline.cpp  smoothing.cpp
tests/01/: input_01.json  output.json
